objects/UNITY_BU_Markup_Junction__c.object
<CustomObject>
    <fields>
        <fullName>BU_Markup_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>BU Markup Ext Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UNITY_BU_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Unit Markups</relationshipLabel>
        <relationshipName>Business_Unit_Markups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Markup__c</fullName>
        <label>Markup</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Product_Code__c</fullName>
        <formula>UNITY_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Product_External_Id__c</fullName>
        <formula>UNITY_Product__r.UNITY_Product_External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Business Unit Markups</relationshipLabel>
        <relationshipName>Business_Unit_Markups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Unit Markup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UNITY_BU_Account__c</columns>
        <columns>UNITY_Product__c</columns>
        <columns>UNITY_Markup__c</columns>
        <columns>NAME</columns>
        <columns>BU_Markup_Ext_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NSBS_BUMs</fullName>
        <columns>NAME</columns>
        <columns>UNITY_BU_Account__c</columns>
        <columns>UNITY_Markup__c</columns>
        <columns>UNITY_Product__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNITY_BU_Account__c</field>
            <operation>equals</operation>
            <value>Nationwide Security and Building Services (NSBS)</value>
        </filters>
        <filters>
            <field>UNITY_Product__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>NSBS BUMs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UAT_Bum_Testing</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>UNITY_Markup__c</columns>
        <columns>UNITY_Product__c</columns>
        <columns>UNITY_BU_Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNITY_Product__c</field>
            <operation>contains</operation>
            <value>UAT</value>
        </filters>
        <filters>
            <field>UNITY_Product__c</field>
            <operation>equals</operation>
            <value>Travel,Labor</value>
        </filters>
        <label>UAT - Bum Testing</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BUM-{00000}</displayFormat>
        <label>Business Unit Markup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Unit Markups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>